--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.3",
     "react-pdf": "^9.2.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
