--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@tanstack/react-query": "^5.24.1",
-    "axios": "^1.6.7",
+    "@types/recharts": "^2.0.1",
+    "axios": "^1.9.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-modal": "^3.16.3",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
